Mtto y display de cv

--- a/HTML-formatos/ArhsiCV.html
+++ b/HTML-formatos/ArhsiCV.html
@@ -208,7 +208,8 @@
                     <fieldset>
                         <div class="grid-layout5">
                             <div id="myDiv2">
-                                <body10></body10>
+                                <body10>
+                                </body10>
                             </div>
                         </div>
                     </fieldset>
@@ -251,14 +252,14 @@
                     <h2 style="text-align:center; color: blue;">IDIOMAS QUE CONOCE</h2>
                     <fieldset>
                         <div>
-                            <table style="width:80%; margin-left: 10%; margin-right: 10%; border: 1px solid black;">
+                            <table style="width:80%; margin-left: 10%; margin-right: 10%;">
                                 <tbody>
                                     <tr>
-                                        <td>Ingles:</td>
+                                        <td style="text-align:right;">Ingles:</td>
                                         <td style="text-align:left;" id="ingles"></td>
-                                        <td>Español:</td>
+                                        <td style="text-align:right;">Español:</td>
                                         <td style="text-align:left;" id="espaniol"></td>
-                                        <td>Otro:</td>
+                                        <td style="text-align:right;">Otro:</td>
                                         <td style="text-align:left;" id="otro"></td>
                                     </tr>
                                 </tbody>
